# mosh

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.org  compile_flags.txt  meson.build
.github/workflows/: test.yml
include/: builtin.h  colors.h  lib_.h  parser.h  shell.h  utils.h
lib_/: getenv_.c  meson.build  printf_.c  strcmp_.c  strlen_.c
src/: built-in.c  builtin.c  main.c  main.cpp  main.h  meson.build  parser.c
test/: assert_test.c  builtin_test.c  lib_test.c  meson.build  parser_test.c  printf_test.c  strcmp_.c  strcmp_test.c  strlen_test.c
tests/: builtin_test.c
utils/: getenv_.c
